# auto_dev

./: .bumpversion.cfg  .env.template  .gitignore  .pylintrc  .pyproject.toml.swp  Makefile  README.md  adev_config.yaml  contract_list.yaml  coverage-report.txt  install_deps.sh  mkdocs.yml  pyproject.toml  rysk_contracts.yaml  tbump.toml  tbump_aea.toml  tbump_autonomy.toml  test_contract.py  tmp.yaml  tmp_contract.yaml  todo.md
.github/workflows/: common_check.yaml  dev.yml  docs-check.yml  github_action.yml  release.yml
auto_dev/: .fmt.py.swp  __init__.py  base.py  check_dependencies.py  cli.py  cli_executor.py  constants.py  deps.py  enums.py  exceptions.py  fmt.py  lint.py  local_fork.py  scaffolder.py  test.py  utils.py
auto_dev/behaviours/: scaffolder.py
auto_dev/commands/: __init__.py  augment.py  convert.py  create.py  deps.py  fmt.py  fsm.py  improve.py  lint.py  metadata.py  publish.py  release.py  repo.py  run.py  scaffold.py  sync.py  test.py
auto_dev/connections/: scaffolder.py
auto_dev/contracts/: block_explorer.py  contract.py  contract_events.py  contract_functions.py  contract_scafolder.py  contract_templates.py  function.py  param_type.py  utils.py  variable.py
auto_dev/dao/: __init__.py  dummy_data.py  generator.py  scaffolder.py
auto_dev/data/: aea-config.yaml  mermaid.py  pylama.ini  ruff.toml
auto_dev/data/connections/: template.py  test_template.py
auto_dev/data/contracts/: header.py
auto_dev/data/fsm/samples/: fsm_specification.yaml
auto_dev/data/openapi/: openapi_specification.yaml  skill.yaml
auto_dev/data/repo/templates/autonomy/: .env.template  .gitignore.template  Makefile.template  README.md.template  adev_config.yaml  install.sh  pyproject.toml.template
auto_dev/data/repo/templates/autonomy/.github/workflows/: common_check.yaml  dev.yaml.template
auto_dev/data/repo/templates/autonomy/tests/: test_it.py.template
auto_dev/data/repo/templates/python/: .gitignore.template  Makefile.py  Makefile.template  README.md.template  dev.py  main.py  make.py  pyproject.py  pyproject.toml.template  readme.py  run_single_agent.py  test_main.py
auto_dev/data/repo/templates/python/scripts/: pre_commit_hook.sh
auto_dev/data/repo/templates/python/tests/: test_main.py.template
auto_dev/data/templates/behaviours/: metrics.jinja  simple_fsm.jinja
auto_dev/data/templates/compose/: tendermint.yaml
auto_dev/data/templates/customs/: exceptions.jinja  handler_header.jinja  main_handler.jinja  method_template.jinja  unexpected_message_handler.jinja
auto_dev/data/templates/dao/: __init__.jinja  base_dao.jinja  dao_template.jinja  test_dao.jinja
auto_dev/data/templates/dialogues/: simple.jinja
auto_dev/data/templates/handlers/: simple.jinja
auto_dev/data/templates/protocols/: data_class.jinja
auto_dev/data/templates/services/: service.yaml.jinja
auto_dev/data/templates/tests/customs/: test_custom.jinja
auto_dev/data/templates/tests/dao/: test_dao.jinja
auto_dev/dialogues/: scaffolder.py
auto_dev/fsm/: chain.py  fsm.py
auto_dev/handler/: exceptions.py  openapi_models.py  openapi_utils.py  scaffolder.py
auto_dev/handlers/: base.py
auto_dev/protocols/: scaffolder.py
auto_dev/services/package_manager/: __init__.py  index.py
auto_dev/services/publish/: __init__.py  index.py
docs/: api.md  dao.md  fsm.md  installation.md  openapi.md  usage.md
docs/api/: auto_dev.md  connections.md  constants.md  contracts.md  fsm.md  handler.md  index.md  protocols.md
docs/stylesheets/: extra.css
scripts/: check_generated.sh  check_upstream.sh  dev.sh  metadata.py
scripts/demos/: all.sh  base.sh  cast.sh  create_agent.sh  create_new_repo.sh
tests/: conftest.py  test_augmenter.py  test_cli.py  test_contracts.py  test_convert.py  test_docs.py  test_fie_operations.py  test_fixtures.py  test_fsm.py  test_local_fork.py  test_publish.py  test_repo.py  test_scaffold.py  test_scripts.py  test_utils.py
tests/data/: crud_protocol.yaml  dummy_abi.json  dummy_abi_2.json  dummy_protocol.md  dummy_protocol.yaml  old_abi.json
tests/data/openapi_examples/: dummy_openapi.yaml  innovation_station.yaml
